--- a/src/Pizzashop/Presentation/headerlayout.template.twig
+++ b/src/Pizzashop/Presentation/headerlayout.template.twig
@@ -2,7 +2,7 @@
 <header>
     <div class="topbar">
         <div class="container">
-            <div class="col-sm-6">
+            <div class="col-xs-7">
             {% include 'topmenu.template.twig' %}
             </div>
             <div class="pull-right">
@@ -16,9 +16,9 @@
     </div>
     <div class="header-content">
         <div class="container">
-            <div class="col-xs-4 col-xs-offset-4">
+           
             <img class='img-logo' src='images/logo.png' />
-            </div>
+            
             
         </div>
     </div>
