--- a/src/Pizzashop/Presentation/bestelformulier.html.twig
+++ b/src/Pizzashop/Presentation/bestelformulier.html.twig
@@ -9,14 +9,14 @@
 		<label for="naam">Familienaam</label>
 		<input type="text" class="form-control" id="naam" placeholder="Janssens" />
 	</div>
-        <div class="form-group">
+        {#<div class="form-group">
             <label for="mail">E-mail</label>
             <input type="email" class="form-control" id="mail" placeholder="ieamand@voorbeeld.be" />
         </div>
     <div class="form-group">
             <label for="password">wachtwoord</label>
             <input type="password" class="form-control" id="password" />
-        </div>
+        </div>#}
         <div class="form-group">
             <label for="telefoon">Telefoon</label>
             <input type="text" class="form-control" id="telefoon" placeholder="0494010203" />
