--- a/src/Pizzashop/Presentation/form.html.twig
+++ b/src/Pizzashop/Presentation/form.html.twig
@@ -1,21 +1,72 @@
-{# empty Twig template #}
-
-    <form action="registreer.php" method="post">
-        
-        {% for key,value in form %}
-            <div class="form-group{% if key in errors|keys %} has-error{% endif %}">
-                <label class="control-label" for="{{key}}">{{key|capitalize }} :</label>
-                    {% if value == "select" %}
-                        <select class="form-control" id="{{ key }}" name="{{ key }}">
-                            {% for plaats in plaatslijst %}
-                                <option value="{{ plaats.id }}" {% if fields[key]== plaats.id %} selected {% endif %}>{{ plaats.gemeente }}</option>
-                            {% endfor %}
-                        </select>
-                    {% else %}
-                        <input type="{{ value }}" class="form-control" id="{{ key }}" name="{{ key }}"{% if key in fields|keys %}value="{{fields[key]}}"{% endif %}  />
-                        {% if key in errors|keys %} <span class="help-block"><strong>{{ errors[key] }}</strong></span>{% endif %}
-                            {% endif %}
+{# registerform-template #}
+    <form class="pizzaform" role="form" method="post" action="index.php{% if page == 'afrekenen' %}?page=afrekenen&option=new {% else %}?page=registreer {% endif %}">
+        <input class="hidden" id="page" name="page" value="{{ page }}">
+        <div class="form-group{% if 'voornaam' in errors|keys %} has-error{% endif %}">
+		<label for="voornaam">Voornaam :</label>
+		<input type="text" class="form-control" id="voornaam" name="voornaam"
+                    {% if 'voornaam' in fields|keys %} value="{{ fields['voornaam'] }}"
+                        {% else %} placeholder="Jan" {% endif %} />
+                {% if 'voornaam' in errors|keys %} <span class="help-block"><strong>{{ errors['voornaam'] }}</strong></span>{% endif %}
+	</div>
+	<div class="form-group{% if 'naam' in errors|keys %} has-error{% endif %}">
+		<label for="naam">Familienaam</label>
+		<input type="text" class="form-control" id="naam" name="naam"
+                    {% if 'naam' in fields|keys %} value="{{ fields['naam'] }}"
+                        {% else %} placeholder="Janssens"{% endif %}  />
+                {% if 'naam' in errors|keys %} <span class="help-block"><strong>{{ errors['naam'] }}</strong></span>{% endif %}
+	</div>
+        {% if page == 'registreer' %}
+        <div class="form-group{% if 'mail' in errors|keys %} has-error{% endif %}">
+            <label for="mail">E-mail</label>
+            <input type="email" class="form-control" id="mail" name="mail"
+                {% if 'mail' in fields|keys %} value="{{fields['mail'] }}"
+                    {% else %} placeholder="iemand@voorbeeld.be" {% endif %}/>
+            {% if 'mail' in errors|keys %} <span class="help-block"><strong>{{ errors['mail'] }}</strong></span>{% endif %}
+        </div>
+    <div class="form-group{% if 'password' in errors|keys %} has-error{% endif %}">
+            <label for="password">wachtwoord</label>
+            <input type="password" class="form-control" id="password" name="password" />
+            {% if 'password' in errors|keys %} <span class="help-block"><strong>{{ errors['password'] }}</strong></span>{% endif %}
+        </div>
+        {% endif %}
+        <div class="form-group{% if 'telefoonnr' in errors|keys %} has-error{% endif %}">
+            <label for="telefoonnr">Telefoon</label>
+            <input type="text" class="form-control" id="telefoonnr" name="telefoonnr"
+                   {% if 'telefoonnr' in fields|keys %}value="{{fields['telefoonnr']}}"
+                    {% else %} placeholder="0494010203"{% endif %} />
+            {% if 'telefoonnr' in errors|keys %} <span class="help-block"><strong>{{ errors['telefoonnr'] }}</strong></span>{% endif %}
+        </div>
+	<div class="form-group{% if ('straat' or 'nr') in errors|keys %} has-error{% endif %}">
+            <div class="row">
+                <div class="col-sm-6 xs-12">
+		<label for="straat">Straat</label>
+		<input type="text" class="form-control" id="straat" name="straat" 
+                    {% if straat in fields|keys %} value="{{ fields['straat'] }}"
+                        {% else %} placeholder="straat" {% endif %}/>
+                </div>
+                <div class="col-sm-3 col-xs-8">
+                <label for="nummer">Nr</label>
+                <input type="number" class="form-control" id="nummer" name="nr"
+                       {% if 'nr' in fields|keys %} value="{{ fields['nr'] }}"{% endif %}/>
+                </div>
+                <div class="col-sm-3 col-xs-4">
+                    <label for="bus">Bus</label>
+                    <input type="text" class="form-control optional" id="bus" name="bus"
+                           {% if 'bus' in fields|keys %} value="{{ fields['bus'] }}"{% endif %} />
+                </div>
             </div>
-        {% endfor %}
-        <button type="submit" class="btn btn-default">Verzenden</button>
-    </form>
+                {% if 'straat' in errors|keys %} <span class="help-block"><strong>{{ errors['straat'] }}</strong></span>{% endif %}
+                {% if 'nr' in errors|keys %} <span class="help-block"><strong>{{ errors['nr'] }}</strong></span>{% endif %}
+
+	</div>
+        <div class="form-group">
+            <label class="control-label" for="plaats">Kies uw gemeente</label>
+                <select class="form-control" id="plaats" name="plaats">
+                    {% for plaats in plaatslijst %}
+                        <option value="{{ plaats.id }}"{% if fields['plaats'] == plaats.id %} selected {% endif %}>{{ plaats.gemeente }}</option>
+                    {% endfor %}
+                </select>
+        </div>
+    <button type="submit" class="btn pizza-btn">Verzenden</button>
+</form>
+        
