--- a/src/Pizzashop/Presentation/headerlayout.template.twig
+++ b/src/Pizzashop/Presentation/headerlayout.template.twig
@@ -6,10 +6,10 @@
             {% include 'topmenu.template.twig' %}
             </div>
             <div class="pull-right">
-        {% if login %}Welkom {{ login.voornaam }} <a href="login.php?actie=uitloggen"><button class="btn pizza-btn">Uitloggen</button></a>
+        {% if login %}Welkom {{ klant.voornaam }} <a href="login.php?actie=uitloggen"><button class="btn pizza-btn">Uitloggen</button></a>
         {% else %}
             <a href="index.php?page=login"><button class="btn pizza-btn">Inloggen</button></a>
-            <a href="registreer.php"><button class="btn pizza-btn">Registreren</button></a>
+            <a href="index.php?page=registreer"><button class="btn pizza-btn">Registreren</button></a>
         {% endif %}
             </div>
         </div>
