--- a/css/pizzastyle.css
+++ b/css/pizzastyle.css
@@ -65,12 +65,63 @@ header {
 .nav > li > a:hover, .nav > li > a:focus {
     background-color:#cc6600;
 }
-
-
-.pizza {
-    background-color: rgba(0,0,0,0.5);
-    border-radius: 5px;
-    border: 1px solid black;
+.pizzavlag {
+    margin-bottom: 40px;
+}
+.pizzavlag li {
+    paddin-top:5px;
+    padding-bottom: 5px;
+    font-size: 1.2em;
+}
+.pizzagreen {
+    background-color: green;
+    border: 5px solid brown;
+    border-right: none;
+    border-bottom-left-radius: 25px;
+    border-top-left-radius: 25px;
+    padding:10px;
+    margin-bottom: 20px;
+    color: white;
+}
+.pizzawhite {
+    border-bottom: 5px solid brown;
+    border-top: 5px solid brown;
+    padding: 10px;
+    background-color: white;
+    color: #282828;
+    margin-bottom: 20px;
+}
+.pizzared {
+    background-color: darkred;
+    color: white;
+    border: 5px solid brown;
+    border-left: none;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+.container-xs-height{
+    display:table;
+    padding-left:0px;
+    padding-right:0px;
+ }
+.row-xs-height{
+      display:table-row;
+}
+.col-xs-height{
+      display:table-cell;
+      float:none;
+}
+.pizzagreen span.ingredients{
+    color: lavender;
+    font-size: 0.8em;
+}
+.pizzagreen >h2.pizzahead, .pizzared >h2.pizzahead{
+    color:white;
+    text-align: center;
+}
+.pizzawhite >h2.pizzahead{
+    color: inherit;
+    text-align: center;
 }
 .pizzahead {
     font-family: akaDora;
@@ -104,6 +155,7 @@ li.pizzalijst >p > a > button.pizza-btn{
 .pizza-img {
     width:200px;
     height: 76px;
+    float: left;
 }
 .img-logo{
     margin-left: auto;
