--- a/src/Pizzashop/Presentation/pizzas.twig
+++ b/src/Pizzashop/Presentation/pizzas.twig
@@ -6,15 +6,34 @@
     <h1 class="pizzahead">Menukaart</h1>
     <p>&nbsp;</p>
     <div class="col-md-6">
-    <ul>
+        <ul>
+
     {% for item in lijst %}
         <li class="pizzalijst">
+           
             <h2 class="pizzahead">{{ item.naam }}</h2>
+                
+            
             <p class="ingredients">{% for ingredient in item.samenstelling %}{{ ingredient.i_naam }}{% if not loop.last %} , {% endif %}{% endfor %}
+     {% for promo in promolijst %}
+            {% if item.id == promo.product.id %}
+                <span class="label label-success"><strong> PROMO </strong></span>
+                {% endif %}
+                {% endfor %}
+                <a href="updatecart.php?action=add&pizza={{ item.id }}">
+                <button class="btn pizza-btn" action="addcart.php" method="post">
+                {% for promo in promolijst %}
+            {% if item.id == promo.product.id %}
+            {{ promo.promoprijs}} 
+                {% elseif item.id != promo.product.id %}
+            {{ item.prijs}}
+                {% endif %}
+                
+                {% endfor %}
+            {#  {{ item.prijs }}  &euro;#}&euro;</button></a>
 
-            <a href="updatecart.php?action=add&pizza={{ item.id }}"><button class="btn pizza-btn" action="addcart.php" method="post">{{ item.prijs}} &euro;</button></a>
             </p>
-        </li>
+        </li>{{item.promo.promoprijs}}
     {% endfor %}
     <ul>
     </div>
