--- a/src/Pizzashop/Presentation/topmenu.template.twig
+++ b/src/Pizzashop/Presentation/topmenu.template.twig
@@ -1,5 +1,5 @@
 {# topmenu.template.twig #}
-    {% set navigation_bar = [['home', 'Home'], ['pizzas', 'Pizzas'], ['promoties', 'Promoties'], ['contact', 'Contact']] -%}
+    {% set navigation_bar = [['home', 'Home'], ['pizzas', 'Pizzas'], ['promoties', 'Promoties'], ['contact', 'Contact'], ['gastenboek', 'Gastenboek']] -%}
 
     <nav class="nav-tabs" role="navigation">
     <ul class="nav nav-tabs">
