--- a/src/Pizzashop/Presentation/bedankt.twig
+++ b/src/Pizzashop/Presentation/bedankt.twig
@@ -2,15 +2,46 @@
 {% extends 'BaseLayout.template.twig' %}
 {% block content %}
     <div class="container">
-    <span class="thanx"> Gracias </span>
-    <p>
-     Bedankt voor uw bestelling, onze koerier komt binnen het uur langs met :
-    </p>
-    <p>
-     {% for item in bestelling %}
-         {{ item.aantal }}x {{ item.product.naam }}<br />
-     {% endfor %}
-     Laat het u smaken
-    </p>
+        <div class="text-center">
+            {% if bestelling %}
+                <span class="thanx"> Gracias </span> 
+                <p>&nbsp;</p>
+                <p>
+                Bedankt voor uw bestelling, onze koerier komt binnen het uur langs met :
+                </p>
+                <p>
+                {% for item in bestelling.items %}
+                    {{ item.aantal }}x {{ item.product.naam }}<br />
+                {% endfor %}
+                </p>
+                Op volgend adres :<br>
+                {{bestelling.klant.voornaam}} {{bestelling.klant.naam}}<br>
+                {{bestelling. klant.straat}} {{bestelling.klant.nr}}
+                {% if bestelling.klant.bus %}/{{bestelling.klant.bus}}{% endif %}<br>
+                {{bestelling.klant.plaats.postcode}} {{bestelling.klant.plaats.gemeente}}
+                <p>&nbsp;</p>
+                <p>
+                Wenst u aan de hand van deze gegevens te registreren vul dan onderstaand formulier in
+                </p>
+            {% endif %}
+                <div class="col-md-4 col-md-offset-4">
+                    <form role="register" method="post" action="login.php?actie=registreer">
+                    <input class="hidden" name="id" id="id" value="
+                           {% if bestelling %}{{bestelling.klant.id}}{% elseif klant %}{{klant.id}}{%endif%}">
+                <div class="form-group {% if fout %}has-error{% endif %}">
+                    <label for="mail">Email</label>
+                    <input type="mail" class="form-control" name="mail" id="mail" placeholder="e-mail" {% if cookie %}value="{{ cookie }}{% endif %}"/>
+                    {% if fout %}<span class="help-block">{{ fout }}</span>{% endif %}
+                </div>
+                <div class="form-group ">
+                    <label for="password">wachtwoord</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="wachtwoord"/>
+                </div>
+                    <button type="submit" class="btn pizza-btn">Registreer</button>
+                </form>
+  
+        </div>
+            
+        </div>   
     </div>
 {% endblock %}
