--- a/src/Pizzashop/Presentation/gastenboek.twig
+++ b/src/Pizzashop/Presentation/gastenboek.twig
@@ -1,13 +1,18 @@
-{# contact.twig #}
+{# gastenboek.twig #}
 {% extends 'BaseLayout.template.twig' %}
 {% block content %}
-    <div class='container'>
-        <div class='contact col-xs-10 col-xs-offset-1'>
-    <h1 class="pizzahead text-center">Contact</h1>
-    <img class='img-responsive col-xs-12' src='images/googlemap.png'>
-    </div>
-        <section id="contactform" class="col-xs-8 col-xs-offset-2">
-            <form class="pizzaform" role="contactform" action="sendmail.php" method="post">
+    <div class="container">
+        <section id="gastenboek" class="col-xs-8 col-xs-offset-2">
+        <div class="gb-items">
+            {% for item in gblijst %}
+                
+                <div class="row">op {{item.datum|date('d M Y - H:m')}} schreef {{ item.naam }}</div>
+                <div class="row">{{item.boodschap}}</div>
+                
+            {% endfor %}
+        </div>
+        
+            <form class="pizzaform" role="gastenboek" action="actie.php" method="post">
                 <div class="form-group">
                     <label class="control-label" for="naam"></label>
                     <input type="text" class="form-control" id="naam" name="naam" placeholder="Jan Janssens" 
@@ -28,10 +33,9 @@
                 {%if error == "contact" %}
                 <span class="label label-danger">Er ging iets mis, controleer of u alle velden wel correct hebt ingevuld</span>
                 {% endif %}
-                <input type="hidden" name="page" id="page" value="contact">
+                <input type="hidden" name="page" id="page" value="gastenboek">
                 <input type="submit" class="btn pizza-btn" value="Verzenden">
             </form>
         </section>
-        
     </div>
 {% endblock %}
