--- a/src/Pizzashop/Presentation/login.twig
+++ b/src/Pizzashop/Presentation/login.twig
@@ -5,7 +5,7 @@
     <div class="col-sm-4 col-sm-offset-4 loginform">
         {% if login %}
             Bedankt om in te loggen {{ login.voornaam }} {{login.naam }}<br>
-            Klik <a href="index.php?page=settings">hier</a> om uw gegevens te raadplegen of te wijzigen.
+            Klik <a href="index.php?page=home">hier</a> om verder te gaan naar de homepagina.
         {% else %}
             {% if loginerror %}
                 {{ loginerror }}
