--- a/src/Pizzashop/Presentation/cartItems.html.twig
+++ b/src/Pizzashop/Presentation/cartItems.html.twig
@@ -1,4 +1,4 @@
-{# cartItems.template.twig #}
+{# cartItems.html.twig #}
             
 {% if cartItems %}<h2 class="pizzahead">Uw winkelwagentje :</h2>
                 <ul class="col-xs-6 pull-right pizzalijst">
