--- a/src/Pizzashop/Presentation/gastenboek.twig
+++ b/src/Pizzashop/Presentation/gastenboek.twig
@@ -1,5 +1,5 @@
 {# gastenboek.twig #}
-{% extends 'BaseLayout.template.twig' %}
+{% extends 'baselayout.html.twig' %}
 {% block content %}
     <div class="container">
         <section id="gastenboek" class="col-xs-8 col-xs-offset-2">
