--- a/src/Pizzashop/Presentation/afrekenen.twig
+++ b/src/Pizzashop/Presentation/afrekenen.twig
@@ -1,5 +1,5 @@
 {# afrekenen.twig #}
-{% extends 'BaseLayout.template.twig' %}
+{% extends 'baselayout.html.twig' %}
 {% set page='afrekenen' %}
 {% block content %}
     <div class="container">
