--- a/src/Pizzashop/Presentation/bedankt.twig
+++ b/src/Pizzashop/Presentation/bedankt.twig
@@ -1,5 +1,5 @@
 {# bedankt.twig #}
-{% extends 'BaseLayout.template.twig' %}
+{% extends 'baselayout.html.twig' %}
 {% block content %}
     <div class="container">
         <div class="text-center">
