--- a/src/Pizzashop/Presentation/contact.twig
+++ b/src/Pizzashop/Presentation/contact.twig
@@ -1,11 +1,17 @@
 {# contact.twig #}
-{% extends 'BaseLayout.template.twig' %}
+{% extends 'baselayout.html.twig' %}
 {% block content %}
     <div class='container'>
         <div class='contact col-xs-10 col-xs-offset-1'>
     <h1 class="pizzahead text-center">Contact</h1>
     <img class='img-responsive col-xs-12' src='images/googlemap.png'>
     </div>
+        {%if succes %}
+            <div class="col-sm-4 col-sm-offset-4 loginform">
+            Bedankt voor uw boodschap<br>
+            Klik <a href="index.php?page=home">hier</a> om verder te gaan naar de homepagina.
+            </div>
+            {% else %}
         <section id="contactform" class="col-xs-8 col-xs-offset-2">
             <form class="pizzaform" role="contactform" action="sendmail.php" method="post">
                 <div class="form-group">
@@ -32,6 +38,7 @@
                 <input type="submit" class="btn pizza-btn" value="Verzenden">
             </form>
         </section>
+                {% endif %}
         
     </div>
 {% endblock %}
