--- a/src/Pizzashop/Presentation/footerlayout.html.twig
+++ b/src/Pizzashop/Presentation/footerlayout.html.twig
@@ -1,27 +1,30 @@
-{# footerlayout.template.twig #}
+{# footerlayout.html.twig #}
 <footer>
-    <div class="container container-xs-height">
+    <div class="container">
+        <div class="container-xs-height">
         <div class="row row-xs-height">
-            <div class="col-xs-4 col-xs-height">
+            <div class="col-xs-6 col-sm-4 col-xs-height">
                 <h3 class="pizzahead">Credits</h3>
+                
                 <p>Bart Plaetevoet<br>
                     Student PHP Ontwikkelaar<br>
                    VDAB 2014
-                </p>
                 <ul id="social-networking">
                     <a href="https://twitter.com/BPlaetevoet"><li class="twitter"></li></a>
                     <a href="https://www.facebook.com/bart.plaetevoet"><li class="facebook"></li></a>
                     <a href="http://be.linkedin.com/pub/bart-plaetevoet/95/8b2/921"><li class="linkedin"></li></a>
                 </ul>
+                </p>
+                
 
             </div>
-                <div class="col-xs-4 col-xs-height">
+                <div class="col-xs-6 col-sm-4 col-xs-height">
                     <h3 class="pizzahead">Tags</h3>
                     {% for ingredient in ingredientlijst %}
                         <a class="tags" href="index.php?page=pizzas&ingredient={{ ingredient.i_naam }}">{{ ingredient.i_naam }}</a> {% if not loop.last %}, {% endif %}
                         {% endfor %}
                 </div>
-                <div class="col-xs-4 col-xs-height">
+                <div class=" col-sm-4 col-xs-height hidden-xs">
                     <address>
                         <ul><h3 class="pizzahead">VDAB Pizzeria</h3>
                             <li>straat, 12
@@ -32,6 +35,7 @@
                     </address>
                 </div>
         </div>
-        
+                
+        </div>
     </div>
 </footer>
