--- a/src/Pizzashop/Presentation/login.twig
+++ b/src/Pizzashop/Presentation/login.twig
@@ -1,5 +1,5 @@
 {# login.twig #}
-{% extends 'BaseLayout.template.twig' %}
+{% extends 'baselayout.html.twig' %}
 {% block content %}
     <div class="container">
     <div class="col-sm-4 col-sm-offset-4 loginform">
